[infrastructure] Add auth stack w/cognito

--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -6,7 +6,7 @@
         "clean": "rm -fr node_modules cdk.out",
         "prettier": "prettier --check '{lib,tst}/**/*.ts'",
         "prettier-fix": "prettier --write '{lib,tst}/**/*.ts'",
-        "test": "echo jest"
+        "test": "jest"
     },
     "dependencies": {
         "aws-cdk-lib": "^2.41.0",
