--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -9,6 +9,9 @@
         "test": "jest"
     },
     "dependencies": {
+        "@aws-cdk/aws-apigatewayv2-alpha": "^2.42.1-alpha.0",
+        "@aws-cdk/aws-apigatewayv2-authorizers-alpha": "^2.42.1-alpha.0",
+        "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.42.1-alpha.0",
         "aws-cdk-lib": "^2.41.0",
         "constructs": "^10.1.97"
     },
@@ -38,6 +41,9 @@
             "cobertura",
             "json",
             "text"
-        ]
+        ],
+        "moduleNameMapper": {
+            "^aws-cdk-lib/.warnings.jsii.js$": "<rootDir>/node_modules/aws-cdk-lib/.warnings.jsii.js"
+        }
     }
 }
