--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,14 @@
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
-    "jest": "^27.5.2",
+    "jest": "^27.5.1",
     "prettier": "2.7.1",
     "typescript": "^4.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && npm run prettier",
+    "clean": "rm -fr build node_modules",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "prettier --check '{src,tst}/**/*.ts?(x)'",
