--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,11 @@
         "test": "jest"
     },
     "dependencies": {
-        "source-map-support": "^0.5.21"
+        "@aws-sdk/client-dynamodb": "^3.172.0",
+        "@aws-sdk/lib-dynamodb": "^3.172.0",
+        "@aws-sdk/util-dynamodb": "^3.172.0",
+        "source-map-support": "^0.5.21",
+        "uuidv4": "^6.2.13"
     },
     "devDependencies": {
         "@types/aws-lambda": "^8.10.104",
@@ -24,6 +28,7 @@
         "prettier": "2.7.1",
         "ts-jest": "^29.0.1",
         "ts-loader": "^9.4.0",
+        "ts-mockito": "^2.6.1",
         "ts-node": "^10.9.1",
         "typescript": "^4.8.3",
         "webpack": "^5.74.0",
