--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
         "@aws-sdk/lib-dynamodb": "^3.172.0",
         "@aws-sdk/util-dynamodb": "^3.172.0",
         "source-map-support": "^0.5.21",
-        "uuidv4": "^6.2.13"
+        "uuidv4": "^6.2.13",
+        "zod": "^3.19.1"
     },
     "devDependencies": {
         "@types/aws-lambda": "^8.10.104",
