--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && CI=1 npm run test && npm run prettier",
-    "test": "react-scripts test --passWithNoTests",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "clean": "rm -fr build node_modules",
     "prettier": "prettier --check 'src/**/*.ts?(x)'",
